# deepgrid_studio

./: .gitignore  CLAUDE.md  CREDITS.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.json
assets/audio/: README.md
assets/fonts/: README.md
assets/maps/: test_level.ron
assets/models/: README.md
assets/projects/sample/: characters.ron  demos.ron  items.ron  magics.ron  monsters.ron  project.ron
assets/projects/sample/levels/: level00.ron  level01.ron
assets/projects/sample/portraits/: README.md
assets/textures/: README.md
docker/: Dockerfile  deepgrid-build.sh  deepgrid-run.sh
docs/: dandan_spec_event.md  dandan_spec_mapeditor.md  dandan_spec_things_editor.md  plan1.md  plan10.md  plan11.md  plan12.md  plan13.md  plan2.md  plan3.md  plan4.md  plan5.md  plan6.md  plan6_5.md  plan7.md  plan8.md  plan9.md  plan9_5.md  project.md  roadmap.md
scripts/: deepgrid-run-win.sh  export-game.sh  fetch_portraits.py  gen_stress_project.py  verify-all.sh
src/: audio.rs  autotest.rs  character.rs  clock.rs  combat.rs  config.rs  data_screen.rs  debug_shot.rs  demo.rs  event.rs  floor_items.rs  game_state.rs  hazard.rs  hud.rs  hunger.rs  item.rs  magic.rs  main.rs  monster.rs  perf.rs  portrait.rs  project.rs  props.rs  rng.rs  rules.rs  runtime.rs  save.rs  screen.rs  settings.rs  title.rs  world.rs
src/dungeon/: block.rs  level.rs  loader.rs  mod.rs
src/editor/: edit3d.rs  labels.rs  mod.rs  ops.rs  shot.rs  ui.rs  walk.rs
src/player/: mod.rs  movement.rs
src/render/: dungeon_mesh.rs  mod.rs
tests/: export_layout.rs
