[package]
name = "deepgrid_studio"
version = "0.1.0"
edition = "2024"
description = "Grid-based first-person 3D dungeon RPG maker. Homage to PC98 'Dandan Dungeon'."
license = "GPL-3.0"

[dependencies]
# Match the versions proven to build/run in docker/ (shared with mycity-simulator).
bevy = { version = "0.15", default-features = false, features = [
    # plan10: BGM + sound effects (ogg). Bevy warns and keeps running when no
    # audio device exists (docker/CI) — required behaviour, checked by autotest.
    "bevy_audio",
    "vorbis",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_image",
    "bevy_render",
    "bevy_sprite",
    "bevy_window",
    "bevy_winit",
    "bevy_pbr",
    "bevy_scene",
    "bevy_gltf",
    # plan12: Bevy States (GameScreen: Title/Demo/Playing). Off by default under
    # default-features = false; the screen-transition machinery needs it.
    "bevy_state",
    # plan4: main-screen HUD (status/message windows) via bevy_ui.
    # egui stays editor-only because bevy_egui draws to the window and isn't
    # captured by Bevy's Screenshot (plan3 Step 6 / plan4 rationale).
    "bevy_ui",
    "bevy_text",
    "default_font",
    "animation",
    "png",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "multi_threaded",
    "x11",
    "webgl2",
] }
bevy_egui = "0.33"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
